--- a/emacs.org
+++ b/emacs.org
@@ -229,16 +229,10 @@ ln -s /path/to/your/safe/directory $HOME/emacs/private
 
 (setq-default indent-tabs-mode nil)
 
-(add-to-list 'eshell-command-aliases-list '("d" "dired $1"))
-(add-to-list 'eshell-command-aliases-list '("e" "find-file $1"))
-(add-to-list 'eshell-command-aliases-list '("emacs" "find-file $1"))
-(add-to-list 'eshell-command-aliases-list '("vi" "find-file $1"))
-(add-to-list 'eshell-command-aliases-list '("vim" "find-file $1"))
-(add-to-list 'eshell-command-aliases-list '("less" "find-file $1"))
-(add-to-list 'eshell-command-aliases-list '("cat" "find-file $1"))
-(add-to-list 'eshell-command-aliases-list '("git" "hub $*"))
-(add-to-list 'eshell-command-aliases-list '("g" "hub $*"))
-(add-to-list 'eshell-command-aliases-list '(":q" "exit"))
+(setq eshell-command-aliases-list
+  '(("d" "dired $1") ("e" "find-file $1") ("emacs" "find-file $1")
+    ("vi" "find-file $1") ("vim" "find-file $1") ("less" "find-file $1") ("cat" "find-file $1")
+    ("git" "hub $*") ("g" "hub $*") (":q" "exit")))
 
 (setq default-tab-width 2)
 
