--- a/emacs.org
+++ b/emacs.org
@@ -143,6 +143,8 @@ ln -s /path/to/your/safe/private.org $HOME/emacs/private.org # file containing e
 
 (use-package gist :ensure t)
 
+(use-package github-browse-file :ensure t)
+
 (use-package undo-tree :ensure t
   :config (global-undo-tree-mode 1))
 
@@ -602,6 +604,7 @@ $HOME/bin
   'magit-commands
   :man-page "hub"
   :actions '((?b "Browse" github-browse)
+             (?f "Browse file" github-browse-file)
              (?i "Issues" github-issues)
              (?p "Pulls" github-pulls)
              (?c "Compare" github-compare)
