Using word at point for helm-ag and friends.

--- a/emacs.org
+++ b/emacs.org
@@ -421,6 +421,8 @@ $HOME/bin
 
 (setq helm-ag-base-command "pt -e --nocolor --nogroup")
 
+(setq helm-ag-insert-at-point 'word)
+
 (setq projectile-completion-system 'helm)
 
 (setq flycheck-standard-error-navigation nil
