--- a/emacs.org
+++ b/emacs.org
@@ -143,7 +143,8 @@ ln -s /path/to/your/safe/private.org $HOME/emacs/private.org # file containing e
 
 (use-package org :ensure t)
 
-(use-package gist :ensure t)
+(use-package gist :ensure t
+  :config (setq gist-view-gist t))
 
 (use-package github-browse-file :ensure t)
 
