--- a/emacs.org
+++ b/emacs.org
@@ -263,6 +263,8 @@ $HOME/bin
          ("Vagrantfile$" . ruby-mode)
          ("Berksfile$" . ruby-mode)))
 
+(use-package go-mode :ensure t)
+
 (use-package haskell-mode :ensure t
   :config (progn (add-hook 'haskell-mode-hook 'turn-on-haskell-indent)))
 
