--- a/emacs.org
+++ b/emacs.org
@@ -31,23 +31,6 @@ ln -s /path/to/your/safe/private.org $HOME/emacs/private.org # file containing e
 cat init.el
 #+END_SRC
 
-#+RESULTS:
-#+BEGIN_SRC sh
-(require 'package)
-(add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/") t)
-(add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/") t)
-(package-initialize)
-
-(unless (file-exists-p package-user-dir) (package-refresh-contents))
-(unless (package-installed-p 'use-package) (package-install 'use-package))
-
-(require 'use-package)
-(use-package org-plus-contrib :ensure t)
-
-(setq package-enable-at-startup nil)
-(org-babel-load-file (concat user-emacs-directory "emacs.org"))
-#+END_SRC
-
 ** personal info vars
 
 #+BEGIN_SRC emacs-lisp
@@ -962,41 +945,21 @@ $HOME/bin
 (global-set-key (kbd "C-c o") 'toggle-todo)
 (global-set-key (kbd "C-c a") 'org-agenda)
 
-(setq org-current-org-buffer-narrowed-to-subtree nil)
-(defun org-narrow-or-widen ()
-  (interactive)
-  (if org-current-org-buffer-narrowed-to-subtree
-      (progn (setq-local org-current-org-buffer-narrowed-to-subtree nil)
-             (widen))
-    (progn (setq-local org-current-org-buffer-narrowed-to-subtree t)
-           (org-narrow-to-subtree))))
-
-(org-babel-do-load-languages
- 'org-babel-load-languages
- '((emacs-lisp . t) (ruby . t) (sql . t) (http . t) (sh . t)))
+(org-babel-do-load-languages 'org-babel-load-languages
+                             '((emacs-lisp . t) (ruby . t) (sql . t) (http . t) (sh . t)))
 
 (setq org-confirm-babel-evaluate nil)
 
-(setq org-speed-commands-user
-      '(("P" . org-move-subtree-up) ;; move item up
-        ("N" . org-move-subtree-down) ;; move item down
-        ("h" . org-speed-command-help)))
-
 (setq org-use-speed-commands t
-      org-completion-use-ido t
       org-return-follows-link t
       org-hide-leading-stars t
-      org-enforce-todo-dependencies t
-      org-clock-out-when-done nil
       org-clock-clocked-in-display 'mode-line
-      org-agenda-start-with-follow-mode t
       org-refile-targets '((org-agenda-files :maxlevel . 10))
       org-refile-use-outline-path t
       org-refile-allow-creating-parent-nodes '(confirm)
       org-tags-column -100
       org-src-preserve-indentation t)
 
-;; try to guess which states various (some possibly shared) org files might use and add them to org-todo-keyword-faces
 (setq org--possible-todo-todo-states '("todo" "incoming")
       org--possible-blocked-todo-states '("blocked" "halted" "stalled" "paused" "pr")
       org--possible-doing-todo-states '("doing" "going")
@@ -1022,12 +985,9 @@ $HOME/bin
                               (mapcar 'org--make-blue-face-entries org--possible-delegated-todo-states)
                               (mapcar 'org--make-green-face-entries org--possible-done-todo-states))))
 
-(add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
+(add-to-list 'auto-mode-alist '("\\.org$" . org-mode))
 
-(add-hook 'org-mode-hook '(lambda ()
-                            (text-scale-set 2)
-                            (save-window-excursion (calendar)) ;; start calendar silently for org-date-from-calendar
-                            (define-key org-mode-map (kbd "C-c n") 'org-narrow-or-widen)))
+(add-hook 'org-mode-hook '(lambda () (text-scale-set 2)))
 #+END_SRC
 
 ** scala
