--- a/emacs.org
+++ b/emacs.org
@@ -777,6 +777,7 @@ $HOME/bin
 (global-set-key (kbd "M-s s") 'helm-swoop)
 (global-set-key (kbd "M-s i") 'helm-semantic-or-imenu)
 (global-set-key (kbd "M-/") 'helm-dabbrev)
+(global-set-key (kbd "C-h b") 'helm-descbinds)
 
 (defalias 'kill-ring-show 'helm-show-kill-ring)
 (defalias 'list-colors-display 'helm-colors)
